# CollegeAdvisor-data

./: .env.example  .env.finetuning.example  .env.production  .gitignore  ACTION_CHECKLIST.md  ADVANCED_TESTS_PROGRESS_REPORT.md  AI_TRAINING_SYSTEM_COMPLETE.md  ALGORITHMS_AND_MATHEMATICS.md  ANSWERS_TO_YOUR_QUESTIONS.md  API_INTEGRATION_INSTRUCTIONS.md  API_INTEGRATION_SUCCESS.md  API_REFERENCE.md  API_REPO_INTEGRATION_CHECKLIST.md  ARCHITECTURE.md  AUDIT_COMPLETION_NOTICE.md  AUDIT_FIXES_SUMMARY.md  AUDIT_QUICK_REFERENCE.md  AUTHENTICATION_REQUIRED.md  AUTHENTICATION_SYSTEM_IMPLEMENTATION.md  CODE_ANALYSIS_REPORT.md  CODE_AUDIT_REPORT.md  COLLEGEADVISOR_AI_SYSTEM_ARCHITECTURE.md  COLLEGEADVISOR_DATA_TODO.md  COMPANY_PRESENTATION_SCRIPT.md  COMPLETE_DEPLOYMENT_INSTRUCTIONS.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_TESTING_SUMMARY.md  COMPREHENSIVE_DATA_MAPPING.md  COMPREHENSIVE_TEST_RESULTS.md  COPY_PASTE_SUMMARY.txt  CORE_QUALITY_ANALYSIS_REPORT.md  CRITICAL_FINDING_STRESS_TESTS.md  CRITICAL_ISSUES_AND_FIXES.md  CRITICAL_PERFORMANCE_FIX.md  CURRENT_STATUS.txt  CURRENT_STATUS_AND_OPTIONS.md  CURRENT_STATUS_UPDATE.md  DATA_ACQUISITION_ROADMAP.md  DATA_EXPANSION_STATUS.md  DATA_EXPANSION_STRATEGY.md  (+149 more)
ai_training/: __init__.py  ab_testing.py  api_server.py  continuous_learning.py  data_quality.py  enhanced_response_generator.py  eval_rag.py  export_to_ollama.py  feature_engineering.py  finetuning_data_prep.py  model_artifacts.py  model_evaluation.py  run_sft.py  run_sft_cpu.py  training_pipeline.py  training_utils.py
api/: __init__.py  main.py  models.py  rag_client.py  requirements.txt
chroma_data/: chroma.sqlite3
collectors/: README.md  (+14 more)
(+136 files in other folders)
