[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "college-advisor-data"
version = "0.1.0"
description = "Data ingestion and processing pipeline for College Advisor AI app"
authors = [{name = "College Advisor Team"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=0.4.15",
    "sentence-transformers>=2.2.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.2",
    "nltk>=3.8.1",
    # "spacy>=3.7.0",  # Temporarily disabled due to compilation issues
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
eval = [
    "ragas>=0.1.0",
    "langchain>=0.1.0",
]
ollama = [
    "ollama>=0.1.0",
]

[project.scripts]
college-data = "college_advisor_data.cli:main"

[tool.setuptools.packages.find]
include = ["college_advisor_data*"]
exclude = ["tests*", "data*", "logs*", "cache*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
